--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,6 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ../..
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.repository }}
